# fiche-rs

./: .build.yml  .gitignore  .replit  Cargo.toml  Dockerfile  README.md  replit.nix
.github/workflows/: codecov.yaml  coverage.yaml  crosstests.yaml
src/: fiche-rs.code-workspace  lib.rs  main.rs  old.rs  windows.rs
