[package]
name = "fiche-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8"
libc = "0.2"
whoami = "1.4"
hostname = { version = "0.3.1", features = ["set"] }
clap = { version = "4.4", features = ["derive"] }

# Unix specific dependencies
[target.'cfg(unix)'.dependencies]
users = { version = "0.11" }

# Windows specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winerror",
    "handleapi",
    "securitybaseapi",
    "processthreadsapi",
    "errhandlingapi",
    "winuser",
    "winbase",
    "wincon",
] }
widestring = "1.0.2"
